--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,18 @@ code {
 
   color: #4e4b66;
 }
+.form-box {
+  width: 458px;
+  height: auto;
+  background: #ffffff;
+  border-radius: 8px;
+  text-align: center;
+  padding: 48px 54px;
+  box-sizing: border-box;
+  margin-top: 96px;
+  margin-bottom: 96px;
+}
+
 .small-p {
   font-family: Poppins;
   font-style: normal;
@@ -50,6 +62,7 @@ code {
   /* identical to box height, or 171% */
 
   letter-spacing: 0.75px;
+  /* margin: 0; */
 }
 .notify-p {
   /* Desktop / Link X-Small */
@@ -75,6 +88,21 @@ code {
 
   color: #c30052;
 }
+.m-0 {
+  margin: 0;
+}
+.mb-8 {
+  margin-bottom: 8px;
+}
+.mr-8 {
+  margin-right: 8px;
+}
+.mt-16 {
+  margin-top: 16px;
+}
+.mb-16 {
+  margin-bottom: 16px;
+}
 .mb-20 {
   margin-bottom: 20px;
 }
@@ -83,6 +111,12 @@ code {
 }
 .mb-30 {
   margin-bottom: 30px;
+}
+.mb-32 {
+  margin-bottom: 32px;
+}
+.mb-48 {
+  margin-bottom: 48px;
 }
 .primary-btn {
   width: 100%;
@@ -124,7 +158,7 @@ code {
   line-height: 28px;
   letter-spacing: 0.75px;
   text-align: center;
-  margin: 10px 0;
+  /* margin: 10px 0; */
 }
 .monaly-primary {
   color: #ef476f;
