--- a/src/index.css
+++ b/src/index.css
@@ -193,6 +193,10 @@ code {
   text-align: center;
   outline: none;
 }
+.inactive {
+  transform: scale(0.9);
+  opacity: 0.5;
+}
 .primary-btn:active {
   transform: scale(1.1);
 }
@@ -344,7 +348,7 @@ input::-ms-clear {
 }
 .popup {
   position: absolute;
-  width: 367px;
+  min-width: 400px;
   height: auto;
   background: #ffffff;
   box-shadow: 0px 4px 32px rgba(0, 0, 0, 0.1);
@@ -421,6 +425,52 @@ input::-ms-clear {
 .hide {
   display: none;
 }
-.cursor{
+.cursor {
   cursor: pointer;
+}
+/* The loading Class */
+.loading {
+  position: relative;
+  background-color: #ddd;
+}
+
+/* The moving element */
+.loading::after {
+  top: 0;
+  display: block;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transform: translateX(-100%);
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(transparent),
+    color-stop(rgba(255, 255, 255, 0.2)),
+    to(transparent)
+  );
+
+  background: linear-gradient(
+    90deg,
+    transparent,
+    rgba(255, 255, 255, 0.2),
+    transparent
+  );
+
+  /* Adding animation */
+  animation: loading 1s infinite;
+}
+/* Loading Animation */
+@keyframes loading {
+  100% {
+    transform: translateX(100%);
+  }
+}
+.inline-block {
+  display: inline-block;
+}
+a {
+  color: currentColor;
 }
