--- a/src/components/screens/SignUp/css/style.css
+++ b/src/components/screens/SignUp/css/style.css
@@ -5,3 +5,8 @@
   justify-content: center;
   align-items: center;
 }
+@media screen and (max-width: 900px) {
+  #signuppage {
+    background: #ffffff;
+  }
+}
