--- a/src/components/includes/SmartPhone/css/style.css
+++ b/src/components/includes/SmartPhone/css/style.css
@@ -42,12 +42,22 @@
 /* The screen (or content) of the device */
 .smartphone .content {
   width: 100%;
-  height: 100%;
+  height: 90%;
   background: white;
   overflow-y: scroll;
   padding: 20px;
   text-align: center;
   position: relative;
+}
+.smartphone .red {
+  background-color: #ffffff;
+  width: 100%;
+  min-height: 10%;
+  /* text-align: center
+  ; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 /* Hide scrollbar for Chrome, Safari and Opera */
 .smartphone .content::-webkit-scrollbar {
@@ -69,6 +79,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  border: none;
 }
 .profile-pic-sub {
   height: 96px;
@@ -96,6 +107,7 @@
   transform: translateX(-50%);
   display: block;
   width: 100px; */
+  margin-bottom: 32px;
 }
 .fixed-logo-box {
   position: sticky;
