--- a/src/components/screens/SignIn/css/style.css
+++ b/src/components/screens/SignIn/css/style.css
@@ -10,4 +10,9 @@
   /* justify-content: center; */
   align-items: center;
 }
+@media screen and (max-width: 900px) {
+  #signinpage {
+    background: #ffffff;
+  }
+}
  
