--- a/src/components/screens/VisitorsScreen/css/style.css
+++ b/src/components/screens/VisitorsScreen/css/style.css
@@ -2,7 +2,10 @@
 #visitorsScreen {
   width: 100%;
   height: 100vh;
-  position: relative;
+  /* position: relative; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 /* The screen (or content) of the device */
@@ -11,11 +14,11 @@
   overflow-y: scroll;
   overflow-x: hidden;
   /* height: calc(100vh -50px); */
-  height: 100%;
+  flex: 0 1 90%;
+  padding-bottom: 100px;
 }
 #visitorsScreen .wider-content-bottom {
-  position: absolute;
-  bottom: 0;
+  flex: 1;
   width: 100%;
   background-color: #ffffff;
   height: auto;
